overlays/k8smain/rolloutservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdomainrolloutService
  namespace: sdomain
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: sdomain
