overlays/k8smain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdomainService
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sdomain
