overlays/k8smain/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdomainingress
  namespace: sdomain
spec:
  rules:
  - host: sdomain.38.cc.ucll.cloud
    http:
      paths:
      - backend:
          service:
            name: sdomainservice
            port:
              number: 80
        path: /
        pathType: Prefix
